--- a/src/current.css
+++ b/src/current.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
 #right-sidebar {
     font-size: 15.8px;
     letter-spacing: -0.2px;
