--- a/src/current.css
+++ b/src/current.css
@@ -78,9 +78,10 @@
   */
   
   .editor-inner textarea {
-    font-size: 16.5px;
+    font-size: 16px;
     letter-spacing: -0.2px;
     font-weight: 350;
+    line-height : 1.45;
   }
   
   .editor-inner {
@@ -121,12 +122,12 @@
   
     --ls-tag-text-opacity: 0.8;
     --ls-tag-text-hover-opacity: 0.8;
-    --ls-page-text-size: 16px;
-    --ls-page-title-size: 36px;
+    --ls-page-text-size: 15.5px;
+    --ls-page-title-size: 35.5px;
     --ls-font-family: "Fira Code";
     --ls-font-weight: 300;
     --ls-font-letter-spacing: 0.002em;
-    --ls-font-line-height: 1.5;
+    --ls-font-line-height: 1.42;
   
     --ls-border-radius-low: 3px;
     --ls-border-radius-medium: 6px;
@@ -249,7 +250,7 @@
     color: var(--comment);
   }
   
-  u {
+  u, ins {
     color: var(--purple);
   }
   
@@ -317,29 +318,50 @@
   
   a[priority],
   a.priority {
-      font-size: 17px; /* Hide text */
+      font-size: 0px; /* Hide text */
   }
   
-  a[priority="A"]:before,
+  a[priority="A"]::before,
   a.priority[href="#/page/A" i]:before {
-    content: "🔴";
-    margin-right: 2px;
+    content: "🔴A";
+    visibility: visible;
   }
   
-  a[priority="B"]:before,
+  a[priority="B"]::before,
   a.priority[href="#/page/B" i]:before {
-    content: "🟡";
-    margin-right: 2px;
+    content: "🟡B";
+    visibility: visible;
   }
   
-  a[priority="C"]:before,
+  a[priority="C"]::before,
   a.priority[href="#/page/C" i]:before {
-    content: "🟢";
-    margin-right: 2px;
+    content: "🟢C";
+    visibility: visible;
+  }
+
+  a.tooltip-priority:first-of-type::before {
+    margin-left: 0.3em;
+    margin-top: 0.5em;
   }
   
-  a[priority]:before,
-  a.priority:before {
+  a[priority]::before,
+  a.priority::before {
+      border-radius: 50%;
+      color: var(--ls-primary-text-color);
+      display: inline-block;
+      font-size: 17px;
+      font-weight: 700;
+      height: 1rem;
+      line-height: 1rem;
+      text-align: center;
+      width: 40px;
+      margin-left: -4px;
+  }
+
+  /* 
+  
+  a[priority]::before,
+  a.priority::before {
       border-radius: 50%;
       color: var(--ls-primary-text-color);
       display: inline-block;
@@ -350,7 +372,7 @@
       text-align: center;
       width: 1.2rem;
   }
-  
+
   .Tooltip__label {
       --arrow-size: 0px;
       background-color: var(--ls-primary-background-color);
@@ -364,7 +386,7 @@
   
   .Tooltip__label ul {
       margin-left: 0;
-  }
+  } */
 
   .page-reference .bracket {
     color: var(--ls-border-color);
